--- a/modulos/viajes/views/menus.xml
+++ b/modulos/viajes/views/menus.xml
@@ -4,12 +4,14 @@
 
         <menuitem id="viajes_menu" name="Elementos" parent="main_viajes_menu" />
 
-        <menuitem id="vehiculo_menu" name="Vehiculos"
-            parent="viajes_menu"
+        <menuitem id="vehiculo_menu" name="Vehiculos" parent="viajes_menu"
             action="vehiculo_list_action" />
 
-        <menuitem id="viaje_menu" name="Viajes"
-            parent="viajes_menu"
-            action="viaje_list_action" />
+        <menuitem id="viaje_menu" name="Viajes" parent="viajes_menu" action="viaje_list_action" />
+
+        <menuitem id="configuration_menu" name="Configuration" parent="main_viajes_menu" />
+
+        <menuitem id="contact_menu" name="Viajeros" parent="configuration_menu"
+            action="contact_list_action" />
     </data>
 </odoo>
