--- a/modulos/viajes/views/viaje.xml
+++ b/modulos/viajes/views/viaje.xml
@@ -16,6 +16,7 @@
                     <field name="duracion" />
                     <field name="vehiculo_id" />
                     <field name="estado" />
+                    <field name="plazas_ocupadas" widget="progressbar" />
                 </list>
             </field>
         </record>
@@ -32,11 +33,15 @@
                                 <field name="titulo" />
                                 <field name="conductor_id" />
                                 <field name="estado" />
+                                <field name="estado_display" />
+                                <field name="finalizado" />
                             </group>
                             <group string="Calendario">
                                 <field name="fecha_inicio" />
+                                <field name="fecha_fin" />
                                 <field name="duracion" />
                                 <field name="plazas" />
+                                <field name="plazas_ocupadas" widget="progressbar" />
                             </group>
                         </group>
                         <notebook>
